# datadogpy

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  BUILD  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  LICENSE-3rdparty.csv  MANIFEST.in  README.md  README.rst  RELEASING.md  Rakefile.rb  SUPPORT.md  bar.py  genindex.html  includeme.html  index.html  mypy.ini  objects.inv  publish_layer.sh  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.azure-pipelines/: all.yml  integration_tests.yml  unit_tests.yml
.codeboarding/: Datadog API Client.md  DogStatsd Client.md  DogStatsd Context Managers.md  Dogshell API Clients.md  Dogshell CLI Core.md  ThreadStats AWS Lambda Integration.md  ThreadStats Client.md  Utility - Core.md  on_boarding.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: changelog.yaml  codeql-analysis.yml  codespell.yml  labeler.yml  release.yaml  stale.yml  test.yml  test_integration.yml
_sources/: index.txt
datadog/: __init__.py  aws_lambda.py  sample.py  version.py
datadog/api/: __init__.py  api_client.py  aws_integration.py  aws_log_integration.py  azure_integration.py  base.py  comments.py  constants.py  dashboard_list_v2.py  dashboard_lists.py  dashboards.py  distributions.py  downtimes.py  events.py  exceptions.py  format.py  gcp_integration.py  graphs.py  hosts.py  http_client.py  infrastructure.py  integrations.py  logs.py  metadata.py  metrics.py  monitors.py  permissions.py  resources.py  roles.py  screenboards.py  security_monitoring_rules.py  security_monitoring_signals.py  service_checks.py  service_level_objectives.py  synthetics.py  tags.py  timeboards.py  users.py
datadog/dogshell/: __init__.py  comment.py  common.py  dashboard.py  dashboard_list.py  downtime.py  event.py  host.py  hosts.py  metric.py  monitor.py  screenboard.py  search.py  security_monitoring.py  service_check.py  service_level_objective.py  tag.py  timeboard.py  wrap.py
datadog/dogstatsd/: __init__.py  aggregator.py  base.py  base3.py  buffered_metrics.py  buffered_metrics_context.py  container.py  context.py  context_async.py  max_sample_metric.py  max_sample_metric_context.py  metric_types.py  metrics.py  route.py  telemetry.py
datadog/stats/: __init__.py  dog_stats_api.py  events.py  metrics.py  statsd.py
datadog/statsd/: __init__.py
datadog/threadstats/: __init__.py  aws_lambda.py  base.py  constants.py  events.py  metrics.py  periodic_timer.py  reporters.py
datadog/util/: cli.py  compat.py  config.py  deprecation.py  format.py  hostname.py
doc/: Makefile  conf.py  index.rst
doc/dev/: testing.md
doc/source/: conf.py  index.rst
tests/: __init__.py
tests/integration/: conftest.py  test_freezer.py
tests/integration/api/: conftest.py  constants.py  test_api.py  test_aws_integration.py  test_aws_logs.py  test_azure_integration.py  test_gcp_integration.py  test_synthetics.py  utils.py
tests/integration/cassettes/: test_freezer.frozen
tests/integration/dogshell/: fpostmonitor.json  test_dogshell.py
tests/integration/dogstatsd/: test_statsd_fork.py  test_statsd_sender.py
tests/integration/util/: snapshot_test_utils.py
tests/performance/: __init__.py  test_lambda_wrapper_thread_safety.py  test_statsd_thread_safety.py  test_statsd_throughput.py  test_threadstats_thread_safety.py
tests/unit/: __init__.py
tests/unit/api/: helper.py  test_api.py  test_security_monitoring.py
tests/unit/dogshell/: test_security_monitoring.py  test_wrap.py
tests/unit/util/: __init__.py  (+3 more)
tests/util/: contextmanagers.py  fake_statsd_server.py  snapshot_test_utils.py  system_info_observer.py
(+109 files in other folders)
