[tool.poetry]
name = "datadog"
version = "0.33.0"
description = "The Datadog Python library"
readme = "README.md"
authors = ["Datadog, Inc."]
license = "BSD-3-Clause"

include = ["LICENSE"]

homepage = "https://www.datadoghq.com"
repository = "https://github.com/DataDog/datadogpy"
documentation = "https://datadogpy.readthedocs.io/en/latest/"

keywords = ["datadog", "monitoring", "logging", "tracing"]

classifiers = [
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  'Development Status :: 5 - Production/Stable',
  'Intended Audience :: Developers',
  'Natural Language :: English',
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/DataDog/datadogpy/issues"

[tool.poetry.scripts]
dog = "datadog.dogshell:main"
dogwrap = "datadog.dogshell.wrap:main"

[tool.poetry.dependencies]
python = "^3.6"
decorator = "4.4.0"
requests = "2.22.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
pytest = "^5.3.2"
mock = "^3.0.5"
freezegun = "^0.3.12"
tox = "^3.14.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
