[build-system]
requires = ["hatchling>=0.15.0"]
build-backend = "hatchling.build"

[project]
name = "datadog"
description = "The Datadog Python library"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*,!=3.5.*,!=3.6.*"
keywords = [
    "datadog",
]
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    'Programming Language :: Python :: Implementation :: CPython',
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "requests>=2.6.0",
    "typing; python_version < '3.5'",
    "configparser<5; python_version < '3.0'",
]
dynamic = ["version"]

[project.urls]
"Bug Tracker" = "https://github.com/DataDog/datadogpy/issues"
Documentation = "https://datadogpy.readthedocs.io/en/latest/"
"Source Code" = "https://github.com/DataDog/datadogpy"

[project.scripts]
dog = "datadog.dogshell:main"
dogwrap = "datadog.dogshell.wrap:main"
dogshell = "datadog.dogshell:main"
dogshellwrap = "datadog.dogshell.wrap:main"

[tool.hatch.version]
path = "datadog/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/datadog",
    "/tests",
]
