[metadata]
name = datadog
version = 0.32.0
description = The Datadog Python library
long_description = file: README.md
long_description_content_type = text/markdown
author = Datadog, Inc.
author_email = dev@datadoghq.com
license = BSD 3-Clause License
url = https://www.datadoghq.com
keywords = datadog
test_suite = tests
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Bug Tracker = https://github.com/DataDog/datadogpy/issues
    Documentation = https://datadogpy.readthedocs.io/en/latest/
    Source Code = https://github.com/DataDog/datadogpy


[options]
packages = find:
install_requires =
    decorator>=3.3.2
    requests>=2.6.0
tests_requires =
    pytest
    mock
    freezegun

[options.entry_points]
console_scripts =
    dog = datadog.dogshell:main
    dogwrap = datadog.dogshell.wrap:main
